duniverse/menhirLib.20200211/test/static/bad/non-terminal-is-expected.mly
%%

%public %inline %type<int> main:
  { () }
